# A-Z-Backend

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py
env/Scripts/: activate  activate.bat  django-admin.py
